ajout de la mise a jour du log en continue
