# api/routes/jobs/index.js
@@ -55,13 +55,12 @@ router.post('/job', [
   body('log').exists().withMessage(createErrorMsg.getMissingParameterMsg('log')),
   query('status')
     .exists().withMessage(createErrorMsg.getMissingParameterMsg('status'))
-    .isIn(['done', 'failed'])
+    .isIn(['done', 'failed', 'running'])
     .withMessage(createErrorMsg.getInvalidParameterMsg('status')),
   query('id')
     .exists().withMessage(createErrorMsg.getMissingParameterMsg('id'))
     .isInt({ min: 1 })
     .withMessage(createErrorMsg.getInvalidParameterMsg('id')),
-
   query('returnCode')
     .exists().withMessage(createErrorMsg.getMissingParameterMsg('returnCode'))
     .isInt({ min: 0 })
@@ -70,6 +69,19 @@ router.post('/job', [
 validateParams,
 pgClient.open,
 jobs.updateJobStatus,
+pgClient.close,
+returnMsg);
+
+router.post('/job/:id/append_log', [
+  body('log').exists().withMessage(createErrorMsg.getMissingParameterMsg('log')),
+  param('id')
+    .exists().withMessage(createErrorMsg.getMissingParameterMsg('id'))
+    .isInt({ min: 1 })
+    .withMessage(createErrorMsg.getInvalidParameterMsg('id')),
+],
+validateParams,
+pgClient.open,
+jobs.appendJobLog,
 pgClient.close,
 returnMsg);
 
